testsuite/tests/dependent/should_fail/T16344a.stderr

T16344a.hs:11:36: error:
    • Expected a type, but ‘a’ has kind ‘ka’
    • In the second argument of ‘T2’, namely ‘a’
      In the type ‘(T2 Type a)’
      In the definition of data constructor ‘MkT2’
